--- a/css/styles.css
+++ b/css/styles.css
@@ -67,3 +67,24 @@
   left: 0;
   min-height: 300px;
 }
+
+.carousel-caption {
+  margin-left: 300px;
+  height: 75%;
+}
+
+.carousel-control-prev {
+  height: 200px;
+  width: 60%;
+}
+
+.carousel-control-next {
+  height: 200px;
+  width: 10%;
+}
+
+#carouselButton {
+  right: 0px;
+  position: absolute;
+  bottom: 0px;
+}
